--- a/index.html
+++ b/index.html
@@ -904,31 +904,28 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <input type="text" class="form-control" id="name" name="name" placeholder="Nama Lengkap" required
-                    data-error="Please enter your name">
+                  <input type="text" class="form-control" id="name" name="name" placeholder="Nama Lengkap" required data-error="Please enter your name">
                   <div class="help-block with-errors"></div>
-                </div>
+                </div>                                 
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <input type="text" class="form-control" id="email" name="email" placeholder="Email" required
-                    data-error="Please enter your Email">
+                  <input type="text" class="form-control" id="email" name="email" placeholder="Email" required data-error="Please enter your Email">
                   <div class="help-block with-errors"></div>
-                </div>
+                </div>                                 
               </div>
               <div class="col-md-12">
-                <div class="form-group">
-                  <textarea class="form-control" id="message" name="message" placeholder="Pesan" rows="4"
-                    data-error="Write your message" required></textarea>
+                <div class="form-group"> 
+                  <textarea class="form-control" id="message" name="message" placeholder="Pesan" rows="4" data-error="Write your message" required></textarea>
                   <div class="help-block with-errors"></div>
                 </div>
                 <div class="submit-button">
-                  <a class="btn btn-signin2" id="submit" type="submit">Submit</a>
-                  <div id="msgSubmit" class="h3 hidden"></div>
-                  <div class="clearfix"></div>
+                  <button class="btn btn-signin2" id="submit" type="submit">Submit</button>
+                  <div id="msgSubmit" class="h3 hidden"></div> 
+                  <div class="clearfix"></div> 
                 </div>
               </div>
-            </div>
+            </div>            
           </form>
         </div>
         <!-- End Col -->
