--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Bootstrap, Landing page, Template, Business, Service">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="author" content="Grayrids">
-  <title>PT. Data Buana Nusantara</title>
+  <title>DBN | PT. Data Buana Nusantara</title>
   <!--====== Favicon Icon ======-->
   <link rel="shortcut icon" href="img/" type="image/png">
   <!-- Bootstrap CSS -->
@@ -164,7 +164,7 @@
 
         <!-- Start Col -->
         <div class="col-lg-6 col-md-6 col-xs-12 p-0">
-          <!-- Start Features -->
+          <!-- Start Features --> 
           <div class="feature-item featured-border2">
             <div class="feature-icon">
               <i class="fas fa-globe"></i>
