--- a/index.html
+++ b/index.html
@@ -358,9 +358,10 @@
       <!-- End Row -->
       <div class="row">
         <div class="col-lg-12">
-          <div class="section-header text-center">
+          <div class="colocation-text section-header text-center">
             <div class="text-center">
               <h2 class="section-title">Colocation Server</h2>
+              <!-- <hr class="horizontal-line"> -->
             </div>
           </div>
         </div>
