--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Bootstrap, Landing page, Template, Business, Service">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="author" content="Grayrids">
-  <title>DBN | PT. Data Buana Nusantara</title>
+  <title>PT. Data Buana Nusantara</title>
   <!--====== Favicon Icon ======-->
   <link rel="shortcut icon" href="img/" type="image/png">
   <!-- Bootstrap CSS -->
