--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
         <!-- End Col -->
         <!-- Start Col -->
-        <div class="col-lg-6 col-md-1 2 pl-4">
+        <div class="col-lg-6 col-md-12 pl-4">
           <div class="business-item-info">
             <h3>Internet Supercepat</h3>
             <p>Performa jaringan <b>Data Buana Nusantara</b> merupakan salah satu yang terbaik di Indonesia. dengan
